--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <input type="text" name="name">
             <input type="number" name="price">
             <button class="submit addNewProductBtn">dodaj produkt</button>
+            <button class="admin__btn clearShop">wyczyść produkty ze sklepu.</button>
         </form>
     </section>
     <section class="basket">
