implement clear shop products from shop and removing this product from basket

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <button class="products__button" data-name="Nimbus 2000" data-price="1000" data-id="2">Kup</button>
             </li>
         </ul>
+        <ul class="products__list-new">
+
+        </ul>
     </section>
     <section class="admin">
         <h2>Dodaj produkt:</h2>
